# aiokafka-foundation-kit

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  release-please-config.json  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish.yml
aiokafka_foundation_kit/: __init__.py
aiokafka_foundation_kit/config/: __init__.py  consumer.py  kafka.py  producer.py  topic.py
aiokafka_foundation_kit/consumer/: __init__.py  client.py  lifecycle.py
aiokafka_foundation_kit/contrib/: __init__.py  _optional_deps.py
aiokafka_foundation_kit/contrib/dependency_injector/: __init__.py  _deps.py  consumer.py  producer.py
aiokafka_foundation_kit/contrib/di/: __init__.py  _deps.py  consumer.py  infra.py  producer.py
aiokafka_foundation_kit/contrib/models/: __init__.py  consumer.py  infra.py  kafka.py  producer.py
aiokafka_foundation_kit/contrib/telemetry/: __init__.py  instrumentations.py
aiokafka_foundation_kit/health/: __init__.py  checks.py
aiokafka_foundation_kit/producer/: __init__.py  client.py  lifecycle.py
aiokafka_foundation_kit/topics/: __init__.py  config.py  management.py
aiokafka_foundation_kit/utils/: __init__.py  config.py  json.py  lifecycle.py
docs/: index.md
docs/guide/: advanced.md  configuration.md  quickstart.md
docs/reference/: index.md
tests/: conftest.py
tests/unit/: conftest.py
tests/unit/consumer/: test_client.py  test_lifecycle.py
tests/unit/contrib/: test_optional_deps.py
tests/unit/contrib/dependency_injector/: test_consumer.py  test_deps.py  test_producer.py
tests/unit/contrib/di/: test_consumer.py  test_deps.py  test_infra.py  test_producer.py
tests/unit/contrib/models/: test_consumer.py  test_infra.py  test_kafka.py  test_producer.py
tests/unit/contrib/telemetry/: test_instrumentations.py
tests/unit/health/: test_checks.py
tests/unit/producer/: test_client.py  test_lifecycle.py
tests/unit/topics/: test_config.py  test_management.py
tests/unit/utils/: test_config.py  test_json.py  test_lifecycle.py
