[project]
name = "aiokafka-foundation-kit"
dynamic = ["version"]
description = "Async Kafka foundation library — factories, settings, DI providers and OpenTelemetry on top of aiokafka"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Alex Shalaev", email = "shalaevad.alexey@gmail.com" }]
keywords = [
    "kafka",
    "aiokafka",
    "async",
    "producer",
    "consumer",
    "streaming",
    "messaging",
    "foundation",
    "observability",
    "opentelemetry",
    "dishka",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = [
    "aiokafka>=0.12.0,<1.0.0",
]

[project.urls]
Repository = "https://github.com/bedrock-python/aiokafka-foundation-kit"
Documentation = "https://bedrock-python.github.io/aiokafka-foundation-kit/"
Changelog = "https://github.com/bedrock-python/aiokafka-foundation-kit/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/bedrock-python/aiokafka-foundation-kit/issues"

[project.optional-dependencies]
# Feature extras
models = [
    "pydantic>=2.10.0,<3.0.0",
]
orjson = [
    "orjson>=3.10.0,<4.0.0",
]
dishka = [
    "dishka>=1.5.0,<2.0.0",
]
dependency-injector = [
    "dependency-injector>=4.41.0,<5.0.0",
]
telemetry = [
    "opentelemetry-api>=1.30.0,<2.0.0",
    "opentelemetry-sdk>=1.30.0,<2.0.0",
    "opentelemetry-instrumentation-aiokafka>=0.50b0,<1.0.0",
]

# Convenience extras
all = [
    "aiokafka-foundation-kit[models,orjson,dishka,dependency-injector,telemetry]",
]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "freezegun>=1.5.5",
    "testcontainers[kafka]>=4.11.0",
]
docs = [
    "zensical>=0.0.37",
    "mkdocstrings-python>=2.0.3",
]
dev = [
    "ruff>=0.15.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    { include-group = "test" },
]

[tool.uv]
link-mode = "copy"

[tool.hatch.version]
path = "aiokafka_foundation_kit/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["aiokafka_foundation_kit"]

[tool.hatch.build.targets.sdist]
include = ["/aiokafka_foundation_kit", "/README.md", "/LICENSE", "/CHANGELOG.md"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.mypy]
python_version = "3.11"
files = ["aiokafka_foundation_kit"]
mypy_path = ["."]
check_untyped_defs = true
disallow_untyped_defs = true
implicit_reexport = false
ignore_missing_imports = true
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true


[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "N", "S", "C4", "DTZ", "SIM", "TRY", "PERF", "RUF", "UP", "ANN", "T20", "PTH", "PLC", "PLE", "PLW"]
ignore = ["TRY003", "S101", "ANN401", "RUF012", "S104", "S105", "S106", "ANN204", "DTZ", "ANN", "N802", "PERF401", "SIM105", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: mark a test as a unit test.",
    "integration: mark a test as an integration test.",
]

[tool.coverage.run]
source = ["aiokafka_foundation_kit"]
omit = [
    "tests/*",
    "*/test_*.py",
]
